# Macro-Map-3.0

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  capacitor.config.ts  drizzle.config.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
.claude/: launch.json
.github/workflows/: macrotray-release.yml
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
capacitor/www/: index.html
docs/: 01-prd.md  02-architecture.md  03-database-schema.md  04-screens.md  05-social-graph-and-profiles.md  06-recipes-voting-reputation.md  07-moderation.md  08-mvp-roadmap-phases.md  09-deployment.md  10-health-integrations-and-tracking.md  11-health-integrations-handoff.md  12-auth-email-google-oauth-plan.md  AGENT-HANDOFF.md  FEATURES-ADDED.md  NEXT-STEPS.md  PHASE-4-GO-LIVE.md  PHASE-4-HANDOFF.md  PHASE-4-STATUS.md  README.md  architecture.md  data-model.md  getting-started.md  operations.md  platform-and-integrations.md  repository-map.md  security.md  status-and-roadmap.md  testing.md
docs/domains/: community-and-trust.md  fitness-and-health.md  identity-and-profiles.md  (+1 more)
public/: manifest.webmanifest  sw.js
scratch_sql/: batch_00.sql  batch_01.sql  batch_02.sql  batch_03.sql  batch_04.sql
scripts/: audit-progress-media.ts  gen-icons.mjs  make-admin.ts  preflight-auth-schema.mjs  seed.ts  take-screenshot.mjs
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/placeholder/: index.html
src-tauri/src/: lib.rs  main.rs
(+231 files in other folders)
